--- a/contacts-list-app/src/app/core/components/footer/footer.component.html
+++ b/contacts-list-app/src/app/core/components/footer/footer.component.html
@@ -1,6 +1,6 @@
 <footer>
   Created by
-  <a target="_blank" href="#">
+  <a target="_blank" href="https://twitter.com/Aaaaaarif">
     <i class="fa fa-twitter"></i>@Aaaaaarif
   </a>
   
