--- a/contacts-list-app/src/app/core/components/header/header.component.html
+++ b/contacts-list-app/src/app/core/components/header/header.component.html
@@ -1,11 +1,14 @@
-<mat-toolbar color="primary">
-  <mat-toolbar-row>
-    <span>Evolent Health - Contact List App</span>
-
-    <!-- This fills the remaining space of the current row -->
-    <span class="example-fill-remaining-space"></span>
-
-    <!-- <span>Index</span>
-    <span>New</span> -->
-  </mat-toolbar-row>
-</mat-toolbar>
+<header>
+  <mat-toolbar color="primary">
+    <mat-toolbar-row>
+      <span class="header-text"><i class="fa fa-medkit" aria-hidden="true"></i> Evolent Health - Contact List App</span>
+  
+      <span class="example-fill-remaining-space"></span>
+  
+      <mat-button-toggle-group appearance="legacy" name="fontStyle" aria-label="Font Style">
+        <mat-button-toggle value="bold"><i class="fa fa-list-ul" aria-hidden="true"></i> Index</mat-button-toggle>
+        <mat-button-toggle value="italic"><i class="fa fa-plus-square" aria-hidden="true"></i> New</mat-button-toggle>
+      </mat-button-toggle-group>
+    </mat-toolbar-row>
+  </mat-toolbar>
+</header>
