--- a/contacts-list-app/src/app/views/contacts/contacts.component.html
+++ b/contacts-list-app/src/app/views/contacts/contacts.component.html
@@ -1,5 +1,4 @@
-<p>
-  contacts works!
-</p>
+<section class="contacts-container">
+  <router-outlet></router-outlet>
+</section>
 
-<router-outlet></router-outlet>
