--- a/contacts-list-app/src/app/core/components/footer/footer.component.scss
+++ b/contacts-list-app/src/app/core/components/footer/footer.component.scss
@@ -1,6 +1,7 @@
 footer {
-  text-align: center;
-  margin-top: 20px;
-  font-size: 14px;
-  color: #888;
+    color: #888;
+    font-size: 14px;
+    margin-top: 20px;
+    padding-top: 25px;
+    text-align: center;
 }
