--- a/contacts-list-app/src/app/core/components/header/header.component.scss
+++ b/contacts-list-app/src/app/core/components/header/header.component.scss
@@ -1,4 +1,8 @@
 header {
+    .logo {
+        color: white;
+        text-decoration: none;
+    }
     .header-text {
         padding-right: 25px;
     }
