--- a/contacts-list-app/src/app/views/contacts/contact-details/contact-details.component.html
+++ b/contacts-list-app/src/app/views/contacts/contact-details/contact-details.component.html
@@ -1,3 +1,1 @@
-<p>
-  contact-details works!
-</p>
+<app-contact-detail-container (edit)="editContact($event)" (remove)="deleteContact($event)"></app-contact-detail-container>
