--- a/contacts-list-app/src/app/views/contacts/contact-new/contact-new.component.html
+++ b/contacts-list-app/src/app/views/contacts/contact-new/contact-new.component.html
@@ -1,3 +1,5 @@
-<h2>New Contact</h2>
+<div class="contact-new">
+  <h2>New Contact</h2>
+  <app-contact-form></app-contact-form>
+</div>
 
-<app-contact-form></app-contact-form>
