--- a/contacts-list-app/src/app/core/components/header/header.component.html
+++ b/contacts-list-app/src/app/core/components/header/header.component.html
@@ -1,16 +1,17 @@
 <header>
   <mat-toolbar color="primary">
     <mat-toolbar-row>
-      <span class="header-text">
-        <i class="fa fa-medkit" aria-hidden="true"></i> Evolent Health - <i>Contact List App</i>
-      </span>
+      <a class="logo" routerLink="/">
+        <span class="header-text">
+          <i class="fa fa-medkit" aria-hidden="true"></i> Evolent Health - <i>Contact List App</i>
+        </span>
+      </a>
   
       <span class="example-fill-remaining-space"></span>
   
       <mat-button-toggle-group
         appearance="legacy"
         name="fontStyle"
-        value="index"
         aria-label="Font Style"
         (change)="onChange($event)"
       >
