--- a/contacts-list-app/src/app/views/contacts/contact-edit/contact-edit.component.html
+++ b/contacts-list-app/src/app/views/contacts/contact-edit/contact-edit.component.html
@@ -1,3 +1,5 @@
-<p>
-  contact-edit works!
-</p>
+<div class="edit-contact">
+  <h2>Edit contact details</h2>
+  <app-contact-form [contact]="contact"></app-contact-form>
+</div>
+
