Switched to json server api.

--- a/contacts-list-app/src/app/views/contacts/contacts-index/contacts-index.component.html
+++ b/contacts-list-app/src/app/views/contacts/contacts-index/contacts-index.component.html
@@ -1,8 +1,11 @@
 <h2>Contact List</h2>
 
-<app-contact-list 
-  [data]="contactsData" 
-  (show)="showContact($event)"
-  (remove)="deleteContact($event)"
-  (edit)="editContact($event)">
-</app-contact-list>
+<div *ngIf="contactsData">
+  <app-contact-list 
+    [data]="contactsData" 
+    (show)="showContact($event)"
+    (remove)="deleteContact($event)"
+    (edit)="editContact($event)">
+  </app-contact-list>
+</div>
+
