Added status in contact detail page.

--- a/contacts-list-app/src/app/core/components/contact-detail/contact-detail.component.html
+++ b/contacts-list-app/src/app/core/components/contact-detail/contact-detail.component.html
@@ -6,6 +6,7 @@
         <p>Last Name : <span>{{contact.lastName}}</span></p>
         <p>Email : <span>{{contact.email}}</span></p>
         <p>Phone Number : <span>{{contact.phoneNumber}}</span></p>
+        <p>Status : <span>{{contact.status}}</span></p>
       </mat-card-content>
       <mat-card-actions>
         <button class="yellow" mat-button mat-stroked-button (click)="edit.emit(contact)">EDIT</button>
