Created global scss files.

--- a/contacts-list-app/src/app/core/components/contact-detail/contact-detail.component.scss
+++ b/contacts-list-app/src/app/core/components/contact-detail/contact-detail.component.scss
@@ -1,3 +1,5 @@
+@import '~app/core/common/scss/variables/variables';
+
 .contact-detail {
     padding-top: 25px;
 
@@ -15,14 +17,14 @@
     }
 
     .blue {
-        border-color: blue;
+        border-color: $navy;;
     }
 
     .yellow {
-        border-color: yellow;
+        border-color: $alert-orange;
     }
 
     .red {
-        border-color: red;
+        border-color: $error-red;
     }
 }
