--- a/contacts-list-app/src/app/core/components/contact-list/contact-list.component.scss
+++ b/contacts-list-app/src/app/core/components/contact-list/contact-list.component.scss
@@ -1,3 +1,5 @@
+@import '~app/core/common/scss/variables/variables';
+
 table {
     width: 100%;
 
@@ -10,15 +12,15 @@ table {
     }
 
     .blue {
-        border-color: blue;
+        border-color: $navy;
     }
 
     .yellow {
-        border-color: yellow;
+        border-color: $alert-orange;
     }
 
     .red {
-        border-color: red;
+        border-color: $error-red;
     }
 
     .action-buttons {
