Added toaster notification.

--- a/contacts-list-app/src/app/core/components/contact-detail/contact-detail.component.html
+++ b/contacts-list-app/src/app/core/components/contact-detail/contact-detail.component.html
@@ -16,6 +16,9 @@
 </div>
 
 <ng-template #notFound>
-  <span>Record not found for the person.</span>
+  <mat-card class="record-not-found">
+    <p>Record not found for the person.</p>
+    <p><a routerLink="/">Click here</a> to move to home page.</p>
+  </mat-card>
 </ng-template>
 
