--- a/contacts-list-app/src/app/core/components/contact-list/contact-list.component.html
+++ b/contacts-list-app/src/app/core/components/contact-list/contact-list.component.html
@@ -50,7 +50,7 @@
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   
     <!-- Paginator -->
-    <!-- <mat-paginator [pageSize]="10" [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator> -->
+    <mat-paginator [pageSize]="10" [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
   </table>
 
   <!-- TODO: Add Busy Indicator -->
