--- a/contacts-list-app/src/app/views/contacts/contact-edit/contact-edit.component.html
+++ b/contacts-list-app/src/app/views/contacts/contact-edit/contact-edit.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="contact" class="edit-contact">
   <h2>Edit contact details</h2>
-  <app-contact-form [contact]="contact"></app-contact-form>
+  <app-contact-edit-form [contact]="contact"></app-contact-edit-form>
 </div>
 
